# quantlop-cpp

./: .gitignore  CMakeLists.txt  LICENSE  pyproject.toml
benchmark/: memory.json  plot.py  run.py  runtime.json
cpp/include/: hamiltonian.hpp  include.hpp  matvec.hpp  pauliword.hpp  simulation.hpp  statevector.hpp  utils.hpp
cpp/src/: bindings.cpp  hamiltonian.cpp  higham.cpp  krylov.cpp  matvec.cpp  pauliword.cpp  simulation.cpp  statevector.cpp
python/quantlop/: __init__.py  utils.py
tests/: test_simulation.py
