[build-system]
requires = ["scikit-build-core>=0.8", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "quantlop"
version = "0.0.2"
description = "Quantlop C++ bindings"
requires-python = ">=3.10"

[tool.scikit-build]
cmake.minimum-version = "3.18"
wheel.packages = ["python/quantlop"]
